--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,8 +2,7 @@
 
 @import './styles/home-chisiamo';
 @import './styles/puntivendita';
-
-
+@import './styles/forms';
 
 @import './styles/navigation';
 
