--- a/src/pages/Generator.scss
+++ b/src/pages/Generator.scss
@@ -1,7 +1,7 @@
 // GENERATOR//
-
 $bgc-viola: #960e3b;
-$bgc-blue: #5f7e83;
+$bgc-blue: #3d5666;
+$bgc-blue-dark: #2f4653;
 
 $bgc-relax: #88abae;
 $bgc-cultura: #690e3b;
