--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,11 @@
+$bgc-viola: #960e3b;
+$bgc-blue: #3d5666;
+$bgc-blue-dark: #2f4653;
 
+$bgc-relax: #88abae;
+$bgc-cultura: #690e3b;
+$bgc-ristorazione: #d49e55;
+$bgc-arte: #667384;
 
 @import './styles/home-chisiamo';
 @import './styles/puntivendita';
