--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,5 @@
 $bgc-viola: #960e3b;
-$bgc-blue: #3d5666;
+$bgc-blue: #2b5667;
 $bgc-blue-dark: #2f4653;
 
 $bgc-relax: #88abae;
@@ -10,6 +10,7 @@ $bgc-arte: #667384;
 @import './styles/home-chisiamo';
 @import './styles/puntivendita';
 @import './styles/forms';
+@import './styles/buble';
 
 @import './styles/navigation';
 
