--- a/src/styles/_home-chisiamo.scss
+++ b/src/styles/_home-chisiamo.scss
@@ -177,7 +177,7 @@ a {
 .cover-bottiglie {
     background-image: url(./img/bottigliehomeechisiamo.png);
     background-size: cover;
-    height: 60vh;
+    // height: 60vh;
     background-position: center center;
 }
 
@@ -407,7 +407,6 @@ section a {
 .link-light {
     transition: all 0.1s ease-in-out;
     position: relative;
-    z-index: -10;
     &:before {
         content: "";
         width: 110%;
@@ -441,7 +440,6 @@ section a {
 .link-dark {
     transition: all 0.1s ease-in-out;
     position: relative;
-    z-index: -10;
     &:before {
         content: "";
         width: 110%;
@@ -581,6 +579,12 @@ section a {
         .half-hover {
             width: 100%;
         }
+    }
+    .cover-bottiglie {
+        height: 40vh
+    }
+    .text-area, .text-area-big {
+        padding: 1em;
     }
 }
 
