--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,6 +11,7 @@ $bgc-arte: #667384;
 @import './styles/puntivendita';
 @import './styles/forms';
 @import './styles/buble';
+@import './styles/vivi';
 
 @import './styles/navigation';
 
