--- a/src/styles/_navigation.scss
+++ b/src/styles/_navigation.scss
@@ -118,7 +118,7 @@ $bgc-arte: #667384;
         right: 0;
         width: 100%;
         height: auto;
-        background-color: $bgc-blue-dark;
+        background-color: $bgc-blue;
         padding: 84px 10% 34px;
 
         li {
