cambio img registrati

--- a/src/styles/_forms.scss
+++ b/src/styles/_forms.scss
@@ -1,6 +1,6 @@
 .bgc-img-registrati {
    
-    background-image: url(./img/imgregistrati.png);
+    background-image: url(./img/group.jpeg);
     background-size: cover;
     height: 95vh;
     background-position: center center;
